# avitab

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
res/: CMakeLists.txt  config.json
src/: CMakeLists.txt  MsfsPanelServer.cpp  config.h.in
src/avitab/apps/: MapApp.cpp
src/charts/: ChartService.cpp
src/charts/libchartfox/: ChartFoxAPI.cpp  ChartFoxChart.cpp  ChartFoxChart.h
src/core/: CMakeLists.txt  Logger.cpp  Logger.h
src/core/avitab/: AviTab.cpp  AviTab.h  CMakeLists.txt
src/core/avitab/apps/: About.cpp  About.h  AirportApp.cpp  AirportApp.h  App.cpp  App.h  AppFunctions.h  AppLauncher.cpp  AppLauncher.h  CMakeLists.txt  ChartsApp.cpp  ChartsApp.h  DocumentsApp.cpp  DocumentsApp.h  HeaderApp.cpp  HeaderApp.h  MapApp.cpp  MapApp.h  NotesApp.cpp  NotesApp.h  PlaneManualApp.cpp  PlaneManualApp.h  ProvidersApp.cpp  ProvidersApp.h  RouteApp.cpp  RouteApp.h
src/core/charts/: APICall.h  CMakeLists.txt  Chart.h  ChartService.cpp  ChartService.h  Crypto.cpp  Crypto.h  RESTClient.cpp  RESTClient.h
src/core/charts/libchartfox/: CMakeLists.txt  ChartFoxAPI.cpp  ChartFoxAPI.h  ChartFoxAuthServer.cpp  ChartFoxAuthServer.h  ChartFoxChart.cpp  ChartFoxChart.h  ChartFoxOAuth2Client.cpp  ChartFoxOAuth2Client.h
src/core/charts/liblocalfile/: CMakeLists.txt  LocalFileAPI.cpp  LocalFileAPI.h  LocalFileChart.cpp  LocalFileChart.h
src/core/charts/libnavigraph/: AuthServer.cpp  AuthServer.h  CMakeLists.txt  NavigraphAPI.cpp  NavigraphAPI.h  NavigraphChart.cpp  NavigraphChart.h  OIDCClient.cpp  OIDCClient.h
src/core/env/: AirportConfig.h  CMakeLists.txt  Config.cpp  Config.h  EnvData.h  Environment.cpp  Environment.h  GUIDriver.cpp  GUIDriver.h  Settings.cpp  Settings.h  ToolEnvironment.cpp  ToolEnvironment.h
src/core/gui_toolkit/: CMakeLists.txt  LVGLToolkit.cpp  LVGLToolkit.h  Timer.cpp  Timer.h
src/core/gui_toolkit/widgets/: Button.cpp  Button.h  CMakeLists.txt  Checkbox.cpp  Checkbox.h  Container.cpp  Container.h  DropDownList.cpp  DropDownList.h  Keyboard.cpp  Keyboard.h  Label.cpp  Label.h  List.cpp  List.h  MessageBox.cpp  MessageBox.h  Page.cpp  Page.h  PixMap.cpp  PixMap.h  Screen.cpp  Screen.h  Slider.cpp  Slider.h  TabGroup.cpp  TabGroup.h  TextArea.cpp  TextArea.h  Widget.cpp  Widget.h  Window.cpp  Window.h
src/core/libimg/: CMakeLists.txt  DDSImage.cpp  DDSImage.h  Image.cpp  Image.h  Rasterizer.cpp  Rasterizer.h  TTFStamper.cpp  TTFStamper.h  XTiffImage.cpp  XTiffImage.h
src/core/libimg/stitcher/: CMakeLists.txt  Stitcher.cpp  Stitcher.h  TileCache.cpp  TileCache.h  TileSource.h
src/core/libnavsql/: CMakeLists.txt  NavDbSchema.h  SqlDatabase.cpp  SqlDatabase.h  SqlLoadManager.cpp  SqlLoadManager.h  SqlStatement.cpp  SqlStatement.h  SqlWorld.cpp  SqlWorld.h
src/core/libnavsql/loaders/: AirportLoader.cpp  AirportLoader.h  CMakeLists.txt  FixLoader.cpp  FixLoader.h
src/core/libnavsql/models/: CMakeLists.txt
src/core/maps/: CMakeLists.txt  Downloader.cpp  Downloader.h  OverlayConfig.h  OverlayHelper.h  OverlayHighlight.cpp  OverlayHighlight.h  OverlayedAirport.cpp  OverlayedAirport.h  OverlayedDME.cpp  OverlayedDME.h  OverlayedFix.cpp  OverlayedFix.h  OverlayedILSLocalizer.cpp  OverlayedILSLocalizer.h  OverlayedMap.cpp  OverlayedMap.h  OverlayedNDB.cpp  OverlayedNDB.h  OverlayedNode.cpp  OverlayedNode.h  OverlayedRoute.cpp  OverlayedRoute.h  OverlayedUserFix.cpp  OverlayedUserFix.h  OverlayedVOR.cpp  OverlayedVOR.h  OverlayedWaypoint.cpp  OverlayedWaypoint.h
src/core/maps/sources/: CMakeLists.txt  Calibration.cpp  Calibration.h  DocumentSource.cpp  DocumentSource.h  DownloadedSource.cpp  DownloadedSource.h  EPSGSource.cpp  EPSGSource.h  GeoTIFFSource.cpp  GeoTIFFSource.h  ImageSource.cpp  ImageSource.h  LinearEquation.cpp  LinearEquation.h  LocalFileSource.cpp  LocalFileSource.h  NavigraphSource.cpp  NavigraphSource.h  OnlineSlippyMapConfig.cpp  OnlineSlippyMapConfig.h  OnlineSlippySource.cpp  OnlineSlippySource.h  XPlaneSource.cpp  XPlaneSource.h
src/core/world/: CMakeLists.txt  LoadManager.cpp  LoadManager.h  World.h
src/core/world/graph/: CMakeLists.txt  NavEdge.h  NavNode.cpp  NavNode.h
src/core/world/loaders/: CMakeLists.txt  FMSLoader.cpp  FMSLoader.h  UserFixLoader.cpp  UserFixLoader.h
src/core/world/models/: Airway.cpp  Airway.h  CMakeLists.txt  Frequency.cpp  Frequency.h  Location.cpp  Location.h  Region.cpp  Region.h
src/core/world/parsers/: BaseParser.cpp  BaseParser.h  CMakeLists.txt  FMSParser.cpp  FMSParser.h  UserFixParser.cpp  UserFixParser.h
src/core/world/routing/: CMakeLists.txt  Route.cpp  Route.h  RouteFinder.cpp  (+1 more)
src/env/: CMakeLists.txt
src/env/msfs/: CMakeLists.txt  MsfsAddon.cpp  MsfsAddonEnvironment.cpp  MsfsAddonEnvironment.h  phony.cpp
src/env/standalone/: CMakeLists.txt  GlfwGUIDriver.cpp  GlfwGUIDriver.h  StandAloneEnvironment.cpp  StandAloneEnvironment.h
src/env/xplane/: CMakeLists.txt  DataCache.cpp  DataCache.h  DataRefExport.cpp  DataRefExport.h  DataRefImport.cpp  DataRefImport.h  MonitorBoundsDecider.cpp  MonitorBoundsDecider.h  XPlaneEnvironment.cpp  XPlaneEnvironment.h  XPlaneGUIDriver.cpp  XPlaneGUIDriver.h  phony.cpp
src/environment/msfs/: CMakeLists.txt  IngamePanelEnvironment.cpp  IngamePanelEnvironment.h  IngamePanelGuiDriver.cpp  IngamePanelGuiDriver.h  IngamePanelHttpReq.cpp  IngamePanelHttpReq.h  IngamePanelServer.cpp  IngamePanelServer.h  README.md
src/environment/standalone/: GlfwGUIDriver.h
src/libimg/: Rasterizer.cpp  Rasterizer.h
src/libxdata/parsers/: CustomSceneryParser.h
src/maps/: OverlayedWaypoint.h
src/maps/sources/: Calibration.cpp  Calibration.h  DocumentSource.cpp  LocalFileSource.cpp  OnlineSlippySource.cpp  PDFSource.cpp
src/platform/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  Platform.cpp  Platform.h  strtod.h
src/tools/navdb/: AtoolsAirwayCompiler.cpp  AtoolsAirwayCompiler.h  AtoolsNavTranslator.cpp  AtoolsNavTranslator.h  AtoolsProcCompiler.cpp  AtoolsProcCompiler.h  BuildNavDB.cpp
src/world/: Manager.h
src/wrapper/: CMakeLists.txt
src/wrapper/desktop/: CMakeLists.txt  Desktop.cpp
src/wrapper/plugin/: CMakeLists.txt
(+131 files in other folders)
